# reversi-flet

./: .gitignore  README.md  app.py  pyproject.toml
reversi/: version.py
reversi/game/: board.py  cell.py  controller.py  game.py
reversi/game/player/: interface.py  simple_computer.py  user_input.py
