[project]
name = "reversi-flet"
version = "0.1.0"
description = ""
authors = [{name = "sakagami0615", email = "sakagami0615@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flet (>=0.28.2,<0.29.0)",
    "openai (>=1.78.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ollama (>=0.4.8,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
